# olxscraper

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  compose.yaml  local.txt  manage.py  pyproject.toml  requirements.txt
config/: asgi.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py
deployment/: Caddyfile  prod.Dockerfile  prod.compose.yaml
docker/: prod.Dockerfile  prod.compose.yaml
docker/entrypoints/: beat-entrypoint.sh  server-entrypoint.sh  worker-entrypoint.sh
flats/: admin.py  models.py  tasks.py  utils.py  validators.py
flats/migrations/: 0001_initial.py  0002_categories.py  0003_alter_category_options_alter_flat_options_and_more.py  0003_rename_categories_category.py  0004_category_search_alter_category_url.py  0005_remove_flat_created_remove_flat_type_flat_category_and_more.py
notifications/: tasks.py  views.py
olxscraper/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
olxscraper/flats/: admin.py  apps.py  models.py  tasks.py  validators.py
olxscraper/flats/migrations/: 0002_category_search.py  0004_alter_category_url_alter_flat_url.py
olxscraper/notifications/: apps.py  tasks.py
olxscraper/searches/: admin.py  apps.py  constants.py  models.py  tasks.py
olxscraper/settings/: base.py  prod.py
olxscraper/templates/: notification.html
olxscraper/utils/: dashboard.py  datetime.py  environment.py
requirements/: dev.txt  prod.txt
research/: async_vs_sync.py  semantic_search.py
static/: serviceworker.js
static/css/: style.css
templates/: notification.html
(+8 files in other folders)
