[project]
name = "olxscraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "celery>=5.4.0",
    "django-celery-beat>=2.7.0",
    "django-extensions>=3.2.3",
    "django-webpush>=0.3.6",
    "django>=5.1.1",
    "pre-commit>=3.8.0",
    "requests>=2.32.3",
]
