[project]
name = "olxscraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "celery>=5.4.0",
    "django-celery-beat>=2.7.0",
    "django-extensions>=3.2.3",
    "django-webpush>=0.3.6",
    "django>=5.1.1",
    "pre-commit>=3.8.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "redis>=5.1.0",
    "django-cors-headers>=4.7.0",
    "psycopg2-binary>=2.9.10",
    "uvicorn>=0.35.0",
    "whitenoise>=6.9.0",
    "django-pwa>=2.0.1",
    "aiohttp>=3.12.13",
    "httpx[http2]>=0.28.1",
    "django-unfold>=0.40.0",
    "django-debug-toolbar>=6.0.0",
]

[dependency-groups]
dev = [
    "marimo[recommended]>=0.14.11",
]

[tool.ruff]
exclude = ["research"]
